package seedu.duke;

public class Command {

    public Command() {}

    public void execute(UI ui, ModuleList modulelist) {

    }

    public boolean checkExit() {
        return false;
    }

}
